# CppUtilities

./: .gitignore  .gitmodules  CMakeLists.txt  CodeStyle.txt  CppUtilitiesConfig.cmake  CppUtilitiesConfig.cmake.in  CppUtilitiesConfigVersion.cmake.in
.github/workflows/: cmake.yml
ArrayView/: ArrayView.h
Calculators/tests/: .gitignore  CMakeLists.txt
Calculators/tests/source/: TestCalculatorBase.cpp
CooperativeScheduler/: CooperativeScheduler.cpp
CooperativeScheduler/tests/source/: test_CooperativeScheduler.cpp  test_StaticCooperativeScheduler.cpp
FiniteDifference/tests/cmake/: .gitignore  CMakeLists.txt
PIDFilters/: DelayIntegratorPlantModel.h  PICalculator.h  PIDFilter.h  PIDTuner.py
PIDFilters/TuningExamples/: CalcPIDTuning.py  TECControllerFeqComp.ipynb  TEK00000_10_17_bb.CSV  plt.py
PIDFilters/tests/: CMakeLists.txt
PIDFilters/tests/source/: test_PIDFilterADC.cpp
RingBuffer/: RingBuffer.h  SingleElementQueue.h
RingBuffer/tests/source/: DataLoader.cpp  test_buffer.cpp  test_ringbuffer.cpp
TemperatureMeasurement/: ThermistorDivider.h
include/: linear_fit.h
include/ArrayView/: ArrayView.h
include/BitControl/: BitField.h
include/BitControl/tests/: test_BitField.cpp
include/Calculators/: CalculatorBase.h  ThermistorCalculator.h
include/Calculators/tests/source/: TestCalculatorBase.cpp
include/CooperativeScheduler/: CooperativeScheduler.h
include/CooperativeScheduler/tests/source/: test_CooperativeScheduler.h  test_StaticCooperativeScheduler.cpp
include/FiniteDifference/: FiniteDifference.h
include/FiniteDifference/tests/cmake/: CMakeLists.txt
include/FiniteDifference/tests/source/: test_finitedifference.cpp
include/PIDFilters/: ControllerBase.h
include/PIDFilters/TuningExamples/: BumpTest_2019-12-19T15:18:43_998219.csv  TEK00000.CSV  TEK00000_10_15.CSV  Untitled.ipynb
include/PIDFilters/tests/: .gitignore
include/PIDFilters/tests/source/: test_PICalculator.cpp  test_PIDFilterADC.cpp  test_PIDFilterGeneral.cpp
include/RingBuffer/: LightweightRingBuffer.h  RingBuffer.h  SingleElementQueue.h
include/RingBuffer/tests/: .gitignore  CMakeLists.txt
include/RingBuffer/tests/source/: DataLoader.cpp  DataLoader.h  test_buffer.cpp
include/TemperatureMeasurement/: ThermistorDivider.h
include/TemperatureMeasurement/tests/: .gitignore  CMakeLists.txt
include/TemperatureMeasurement/tests/source/: TestThermistorDivider.cpp
include/Utilities/: CommonTypes.h  Crc.h  Serializer.h  TypeConversion.h  math.h
include/Utilities/tests/: .gitignore
include/Utilities/tests/source/: test_Crc.cpp  test_Crc.h
tests/: .gitignore  CMakeLists.txt  main.cpp
tests/source/: test_linear_fit.cpp
